--- a/demo1.html
+++ b/demo1.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
-    <h2>First javascript code </h2>
+    <h1>hello</h1>
 </body>
 </html>
-
-
